--- a/styles/index.css
+++ b/styles/index.css
@@ -250,7 +250,7 @@ body {
 }
 
 .left-side > .words > .colored {
-    color:#56bae8;    
+    color:#5bd4f5;    
 }
 
 .left-side > .words > .last {
